--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: CI-CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [ develop, main, feature/*, hotfix/* ]
   pull_request:
-    branches: [ main ]
+    branches: [ develop, main ]
 
   workflow_dispatch:
 
