--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,7 +23,7 @@ jobs:
     name: Deploy to Homologation
     runs-on: ubuntu-latest
     needs: [Build]
-    if: github.event_name == 'pull_request' && github.ref == 'refs/heads/develop'
+    if: github.event_name == 'pull_request' && github.base_ref == 'refs/heads/develop'
     environment: 
       name: Development
       url: http://azure.dev.com
@@ -36,7 +36,7 @@ jobs:
     name: Deploy to Production    
     runs-on: ubuntu-latest
     needs: [Deploy_Homologation]
-    if: github.event_name == 'pull_request' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'pull_request' && github.base_ref == 'refs/heads/main'
 
     environment: 
       name: Production
