--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: CI-CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [ develop, main, feature/*, hotfix/* ]
   pull_request:
-    branches: [ main ]
+    branches: [ develop, main ]
 
   workflow_dispatch:
 
@@ -15,12 +15,21 @@ jobs:
     steps:
       - name: Compile
         run: echo Hello, world!
+      
+      - name: github.ref
+        run: echo ${{github.ref}}
+        
+      - name: github.base_ref
+        run: echo ${{github.base_ref}}
+        
+      - name: github.event.pull_request.base.ref
+        run: echo ${{ github.event.pull_request.base.ref }}
 
   Deploy_Homologation:
     name: Deploy to Homologation
     runs-on: ubuntu-latest
     needs: [Build]
-    if: github.event_name == 'pull_request' && github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/develop'
     environment: 
       name: Development
       url: http://azure.dev.com
@@ -33,7 +42,7 @@ jobs:
     name: Deploy to Production    
     runs-on: ubuntu-latest
     needs: [Deploy_Homologation]
-    if: github.event_name == 'pull_request' && github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
 
     environment: 
       name: Production
