--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,7 +31,7 @@ jobs:
     needs: [Build]
     if: github.ref == 'refs/heads/develop'
     environment: 
-      name: Development
+      name: Homologation
       url: http://azure.dev.com
           
     steps:
