--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,7 +41,7 @@ jobs:
   Deploy_Production:
     name: Deploy to Production    
     runs-on: ubuntu-latest
-    needs: [Deploy_Homologation]
+    needs: [Build]
     if: github.ref == 'refs/heads/main'
 
     environment: 
