--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,15 +15,24 @@ jobs:
     steps:
       - name: Compile
         run: echo Hello, world!
-      
-      - name: github.ref
-        run: echo ${{github.ref}}
-        
-      - name: github.base_ref
-        run: echo ${{github.base_ref}}
-        
-      - name: github.event.pull_request.base.ref
-        run: echo ${{ github.event.pull_request.base.ref }}
+
+      - name: Generate Version
+        id: version
+        uses: paulhatch/semantic-version@v4.0.2
+        with:
+          tag_prefix: "v"
+          major_pattern: "(MAJOR)"
+          minor_pattern: "(MINOR)"
+          format: "${major}.${minor}.${patch}-prerelease${increment}"
+          # Optional path to check for changes. If any changes are detected in the path the
+          # 'changed' output will true. Enter multiple paths separated by spaces.
+          # change_path: "src/my-service"
+          short_tags: false
+          bump_each_commit: false
+
+      - name: Application Version
+        run: echo ${{ steps.version.outputs.version }}
+
 
   Deploy_Homologation:
     name: Deploy to Homologation
