--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,11 +34,11 @@ jobs:
 
       - name: Application Version
         run: |
-          echo ${{ steps.version.outputs.major }}
-          echo ${{ steps.version.outputs.minor }}
-          echo ${{ steps.version.outputs.patch }}
-          echo ${{ steps.version.outputs.version }}
-          echo ${{ steps.version.outputs.version_tag }}
+          echo 'MAJOR : ${{ steps.version.outputs.major }}' 
+          echo 'MINOR : ${{ steps.version.outputs.minor }}'
+          echo 'PATCH : ${{ steps.version.outputs.patch }}'
+          echo 'VERSION : ${{ steps.version.outputs.version }}'
+          echo 'TAG : ${{ steps.version.outputs.version_tag }}
 
 #  Deploy_Homologation:
 #    name: Deploy to Homologation
