--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,7 +22,7 @@ jobs:
         id: semver
         uses: lukaszraczylo/semver-generator@v1
         with:
-          repository_local: true
+          config_file: semver.yaml
 
       - name: Application Version
         run: |
