--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,40 +18,33 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Generate Version
-        id: semver
-        uses: lukaszraczylo/semver-generator@v1
-        with:
-          config_file: semver.yaml
-
-      - name: Application Version
-        run: |
-          echo 'VERSION : ${{ steps.semver.outputs.semantic_version }}'
+      - name: Run a one-line script
+        run: echo I am deploying to Homologation
 
 
-#  Deploy_Homologation:
-#    name: Deploy to Homologation
-#    runs-on: ubuntu-latest
-#    needs: [Build]
-#    if: github.ref == 'refs/heads/develop'
-#    environment: 
-#      name: Homologation
-#      url: http://azure.dev.com
+  Deploy_Homologation:
+    name: Deploy to Homologation
+    runs-on: ubuntu-latest
+    needs: [Build]
+    if: github.ref == 'refs/heads/develop'
+    environment: 
+      name: Homologation
+      url: http://azure.dev.com
           
-#    steps:
-#      - name: Run a one-line script
-#        run: echo I am deploying to Homologation
+    steps:
+      - name: Run a one-line script
+        run: echo I am deploying to Homologation
 
-#  Deploy_Production:
-#    name: Deploy to Production    
-#    runs-on: ubuntu-latest
-#    needs: [Build]
-#    if: github.ref == 'refs/heads/main'
-
-#    environment: 
-#      name: Production
-#      url: http://azure.com
+  Deploy_Production:
+    name: Deploy to Production    
+    runs-on: ubuntu-latest
+    needs: [Build]
+    if: github.ref == 'refs/heads/main'
+    
+    environment: 
+      name: Production
+      url: http://azure.com
       
-#    steps:
-#      - name: Run a one-line script
-#        run: echo I am deploying to Production
+    steps:
+      - name: Run a one-line script
+        run: echo I am deploying to Production
