--- a/.github/workflows/ci-cd-multi-stage.yml
+++ b/.github/workflows/ci-cd-multi-stage.yml
@@ -5,3 +5,80 @@ on:
     branches: [ develop, main, feature/*, hotfix/* ]
   pull_request:
     branches: [ develop, main ]
+
+  workflow_dispatch:
+
+jobs:
+  APP1-BUILD:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Build
+        run: echo Build APP1
+
+  APP2-BUILD:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Build
+        run: echo Build APP2
+        
+  APP3-BUILD:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Build
+        run: echo Build APP3
+
+  DOCKER-APPROVAL:
+    runs-on: ubuntu-latest
+    needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD]
+    
+    if: github.ref == 'refs/heads/main'
+    
+    environment: 
+      name: DockerHub
+      url: https://hub.docker.com
+          
+    steps:
+      - name: Request Approval
+
+
+  APP1-DOCKER:
+    runs-on: ubuntu-latest
+    needs: [DOCKER-APPROVAL]
+    
+    steps:
+      - name: Deploy Docker
+        run: echo Deploy APP1 Docker
+        
+  APP2-DOCKER:
+    runs-on: ubuntu-latest
+    needs: [DOCKER-APPROVAL]
+              
+    steps:
+      - name: Deploy Docker
+        run: echo Deploy APP2 Docker
+        
+  APP-3-DOCKER:
+    runs-on: ubuntu-latest
+    needs: [DOCKER-APPROVAL]
+    
+    steps:
+      - name: Deploy Docker
+        run: echo Deploy APP3 Docker
