--- a/.github/workflows/ci-cd-multi-stage.yml
+++ b/.github/workflows/ci-cd-multi-stage.yml
@@ -85,7 +85,7 @@ jobs:
 
   PROD-APPROVAL:
     runs-on: ubuntu-latest
-    needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD]
+    needs: [APP1-DOCKER, APP2-DOCKER, APP3-DOCKER]
     
     if: github.ref == 'refs/heads/main'
     
