--- a/.github/workflows/workflow-ci-semver.yml
+++ b/.github/workflows/workflow-ci-semver.yml
@@ -31,12 +31,9 @@ jobs:
         run: echo Build APP3
 
   APPLICATION-VERSION:
+    name: ${{ steps.version.outputs.version_tag }}
     runs-on: ubuntu-latest
     needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD]
-        
-    environment: 
-      name: Default
-      url: steps.version.outputs.version_tag
           
     steps:
       - name: Checkout
@@ -56,6 +53,3 @@ jobs:
           short_tags: false
           # If this is set to true, *every* commit will be treated as a new version.
           bump_each_commit: false
-          
-      - name : ${{ steps.version.outputs.version_tag }}
-        run: echo ${{ steps.version.outputs.version_tag }}
