--- a/.github/workflows/workflow-ci-semver.yml
+++ b/.github/workflows/workflow-ci-semver.yml
@@ -30,13 +30,9 @@ jobs:
       - name: Build
         run: echo Build APP3
 
-  APPLICATION-VERSION:
+  CHECK-VERSION:
     runs-on: ubuntu-latest
     needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD]
-        
-    environment: 
-      name: Default
-      url: steps.version.outputs.version_tag
           
     steps:
       - name: Checkout
@@ -44,7 +40,7 @@ jobs:
         with:
           fetch-depth: 0
           
-      - name: Application Version ${{ steps.version.outputs.version_tag }}
+      - name: Check Version
         id: version
         uses: paulhatch/semantic-version@v4.0.2
         with:
