--- a/.github/workflows/workflow-ci-semver.yml
+++ b/.github/workflows/workflow-ci-semver.yml
@@ -30,10 +30,13 @@ jobs:
       - name: Build
         run: echo Build APP3
 
-  CHECK-VERSION:
+  GENERATE-VERSION:
     runs-on: ubuntu-latest
     needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD]
-          
+
+    outputs:
+      output1: ${{ steps.version.outputs.version_tag }}
+      
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -52,6 +55,12 @@ jobs:
           short_tags: false
           # If this is set to true, *every* commit will be treated as a new version.
           bump_each_commit: false
-          
-      - name : Version ${{ steps.version.outputs.version_tag }}
-        run: echo ${{ steps.version.outputs.version_tag }}
+  
+  CHECK_VERSION:
+    runs-on: ubuntu-latest
+    needs: [GENERATE-VERSION]
+      
+    steps:
+      - name : Version ${{ needs.GENERATE-VERSION.outputs.output1 }}
+        run: echo ${{ needs.GENERATE-VERSION.outputs.output1 }}
+
