--- a/.github/workflows/workflow-ci-semver.yml
+++ b/.github/workflows/workflow-ci-semver.yml
@@ -56,7 +56,8 @@ jobs:
           # If this is set to true, *every* commit will be treated as a new version.
           bump_each_commit: false
   
-  CHECK_VERSION:
+  CHECK-VERSION:
+    name: ${{ needs.GENERATE-VERSION.outputs.output1 }}
     runs-on: ubuntu-latest
     needs: [GENERATE-VERSION]
       
