--- a/.github/workflows/workflow-ci-semver.yml
+++ b/.github/workflows/workflow-ci-semver.yml
@@ -32,8 +32,6 @@ jobs:
 
   GENERATE-VERSION:
     runs-on: ubuntu-latest
-    needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD]
-
     outputs:
       output1: ${{ steps.version.outputs.version_tag }}
       
@@ -59,7 +57,7 @@ jobs:
   CHECK-VERSION:
     name: ${{ needs.GENERATE-VERSION.outputs.output1 }}
     runs-on: ubuntu-latest
-    needs: [GENERATE-VERSION]
+    needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD, GENERATE-VERSION]
       
     steps:
       - name : Version ${{ needs.GENERATE-VERSION.outputs.output1 }}
