--- a/.github/workflows/workflow-ci-cd.yml
+++ b/.github/workflows/workflow-ci-cd.yml
@@ -69,9 +69,18 @@ jobs:
           # If this is set to true, *every* commit will be treated as a new version.
           bump_each_commit: false
 
+  CHECK-VERSION:
+    name: ${{ needs.GENERATE-VERSION.outputs.output1 }}
+    runs-on: ubuntu-latest
+    needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD, GENERATE-VERSION]
+      
+    steps:
+      - name : Version ${{ needs.GENERATE-VERSION.outputs.output1 }}
+        run: echo ${{ needs.GENERATE-VERSION.outputs.output1 }}
+        
   DOCKER-APPROVAL:
     runs-on: ubuntu-latest
-    needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD]
+    needs: [CHECK-VERSION]
     
     if: github.ref == 'refs/heads/main'
     
