--- a/.github/workflows/workflow-ci-cd.yml
+++ b/.github/workflows/workflow-ci-cd.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Build
         run: echo Build APP3
         
-  GENERATE-VERSION:
+  SEM-VERSION:
     runs-on: ubuntu-latest
     outputs:
       output1: ${{ steps.version.outputs.version_tag }}
@@ -70,13 +70,13 @@ jobs:
           bump_each_commit: false
 
   CHECK-VERSION:
-    name: ${{ needs.GENERATE-VERSION.outputs.output1 }}
+    name: ${{ needs.SEM-VERSION.outputs.output1 }}
     runs-on: ubuntu-latest
-    needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD, GENERATE-VERSION]
+    needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD, SEM-VERSION]
       
     steps:
-      - name : Version ${{ needs.GENERATE-VERSION.outputs.output1 }}
-        run: echo ${{ needs.GENERATE-VERSION.outputs.output1 }}
+      - name : Version ${{ needs.SEM-VERSION.outputs.output1 }}
+        run: echo ${{ needs.SEM-VERSION.outputs.output1 }}
   
   GENERATE-TAG:
     runs-on: ubuntu-latest
@@ -85,10 +85,13 @@ jobs:
    # if: github.ref == 'refs/heads/main'
     
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      
       - name: Create Tag
         uses: negz/create-tag@v1
         with:
-          version: v0.0.1#${{ needs.GENERATE-VERSION.outputs.output1 }}
+          version: v0.0.1#${{ needs.SEM-VERSION.outputs.output1 }}
           message: Auto generated tag
           token: ${{ secrets.GITHUB_TOKEN }}
         
