--- a/.github/workflows/workflow-ci-cd.yml
+++ b/.github/workflows/workflow-ci-cd.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       
-      - name: Create Tag
+      - name: ${{ needs.SEM-VERSION.outputs.output1 }}
         uses: negz/create-tag@v1
         with:
           version: ${{ needs.SEM-VERSION.outputs.output1 }}
