--- a/.github/workflows/workflow-ci-cd.yml
+++ b/.github/workflows/workflow-ci-cd.yml
@@ -78,7 +78,7 @@ jobs:
       - name : Version ${{ needs.SEM-VERSION.outputs.output1 }}
         run: echo ${{ needs.SEM-VERSION.outputs.output1 }}
   
-  GENERATE-TAG:
+  CREATE-TAG:
     runs-on: ubuntu-latest
     needs: CHECK-VERSION
     
@@ -88,11 +88,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       
-      - name: ${{ needs.SEM-VERSION.outputs.output1 }}
+      - name: Create Tag
         uses: negz/create-tag@v1
         with:
           version: ${{ needs.SEM-VERSION.outputs.output1 }}
-          message: Auto generated tag
+          message: ${{ needs.SEM-VERSION.outputs.output1 }}
           token: ${{ secrets.GITHUB_TOKEN }}
         
   DOCKER-APPROVAL:
