--- a/.github/workflows/workflow-ci-cd.yml
+++ b/.github/workflows/workflow-ci-cd.yml
@@ -80,7 +80,7 @@ jobs:
   
   CREATE-TAG:
     runs-on: ubuntu-latest
-    needs: CHECK-VERSION
+    needs: [CHECK-VERSION]
     
    # if: github.ref == 'refs/heads/main'
     
@@ -88,11 +88,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       
-      - name: Create Tag
+      - name: Create Tag ${{ needs.SEM-VERSION.outputs.output1 }}
         uses: negz/create-tag@v1
         with:
           version: ${{ needs.SEM-VERSION.outputs.output1 }}
-          message: ${{ needs.SEM-VERSION.outputs.output1 }}
+          message: Auto-generated
           token: ${{ secrets.GITHUB_TOKEN }}
         
   DOCKER-APPROVAL:
