--- a/.github/workflows/workflow-ci-cd.yml
+++ b/.github/workflows/workflow-ci-cd.yml
@@ -82,7 +82,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [SEM-VERSION, CHECK-VERSION]
     
-   # if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     
     steps:
       - name: Checkout
