--- a/.github/workflows/workflow-ci-cd.yml
+++ b/.github/workflows/workflow-ci-cd.yml
@@ -70,7 +70,7 @@ jobs:
           bump_each_commit: false
 
   CHECK-VERSION:
-    name: ${{ needs.SEM-VERSION.outputs.output1 }}
+    name: v${{ needs.SEM-VERSION.outputs.output1 }}
     runs-on: ubuntu-latest
     needs: [APP1-BUILD, APP2-BUILD, APP3-BUILD, SEM-VERSION]
       
