--- a/.github/workflows/ci-cd-multi-server.yml
+++ b/.github/workflows/ci-cd-multi-server.yml
@@ -38,7 +38,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     environment: 
       name: RIGHTNOW01
-      url: 127.0.0.1
+      url: http://127.0.0.1
           
     steps:
       - name: Run a one-line script
@@ -51,7 +51,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     environment: 
       name: RIGHTNOW02
-      url: 127.0.0.2
+      url: http://127.0.0.2
           
     steps:
       - name: Run a one-line script
@@ -64,7 +64,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     environment: 
       name: RIGHTNOW03
-      url: 127.0.0.3
+      url: http://127.0.0.3
           
     steps:
       - name: Run a one-line script
