--- a/.github/workflows/ci-cd-multi-server.yml
+++ b/.github/workflows/ci-cd-multi-server.yml
@@ -25,7 +25,7 @@ jobs:
     name: Generate Artifact
     runs-on: ubuntu-latest
     needs: [Build]
-    if: github.ref == 'refs/heads/main'
+    if: github.base_ref == 'refs/heads/main'
     
     steps:
       - name: Run a one-line script
