--- a/.github/workflows/ci-cd-multi-server.yml
+++ b/.github/workflows/ci-cd-multi-server.yml
@@ -20,6 +20,12 @@ jobs:
 
       - name: Run a one-line script
         run: echo I am deploying to Homologation
+        
+      - name: github.ref
+        run: echo github.ref
+        
+      - name: github.base_ref
+        run: echo github.base_ref
 
   Artifact:
     name: Generate Artifact
