--- a/.github/workflows/ci-cd-multi-server.yml
+++ b/.github/workflows/ci-cd-multi-server.yml
@@ -31,6 +31,7 @@ jobs:
     name: Generate Artifact
     runs-on: ubuntu-latest
     needs: [Build]
+    
     if: github.base_ref == 'main'
     
     steps:
@@ -41,7 +42,9 @@ jobs:
     name: Deploy to RIGHTNOW01
     runs-on: [self-hosted, srvprd01]
     needs: [Artifact]
-    if: github.ref == 'refs/heads/main'
+    
+    if: github.base_ref == 'main'
+    
     environment: 
       name: RIGHTNOW01
       url: http://127.0.0.1
@@ -54,7 +57,9 @@ jobs:
     name: Deploy to RIGHTNOW02
     runs-on: [self-hosted, srvprd02]
     needs: [Artifact]
-    if: github.ref == 'refs/heads/main'
+    
+    if: github.base_ref == 'main'
+    
     environment: 
       name: RIGHTNOW02
       url: http://127.0.0.2
@@ -67,7 +72,9 @@ jobs:
     name: Deploy to RIGHTNOW03
     runs-on: [self-hosted, srvprd03]
     needs: [Artifact]
-    if: github.ref == 'refs/heads/main'
+    
+    if: github.base_ref == 'main'
+    
     environment: 
       name: RIGHTNOW03
       url: http://127.0.0.3
