--- a/.github/workflows/ci-cd-multi-server.yml
+++ b/.github/workflows/ci-cd-multi-server.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [Build]
     
-    if: github.base_ref == 'main'
+    if: ${{ (github.base_ref == 'main') || (github.ref == 'refs/heads/main') }}
     
     steps:
       - name: Run a one-line script
@@ -43,7 +43,7 @@ jobs:
     runs-on: [self-hosted, srvprd01]
     needs: [Artifact]
     
-    if: github.base_ref == 'main'
+    if: github.ref == 'refs/heads/main'
     
     environment: 
       name: RIGHTNOW01
@@ -58,7 +58,7 @@ jobs:
     runs-on: [self-hosted, srvprd02]
     needs: [Artifact]
     
-    if: github.base_ref == 'main'
+    if: github.ref == 'refs/heads/main'
     
     environment: 
       name: RIGHTNOW02
@@ -73,7 +73,7 @@ jobs:
     runs-on: [self-hosted, srvprd03]
     needs: [Artifact]
     
-    if: github.base_ref == 'main'
+    if: github.ref == 'refs/heads/main'
     
     environment: 
       name: RIGHTNOW03
