Fix branch name 'main'

--- a/.github/workflows/workflow-sync-main.yml
+++ b/.github/workflows/workflow-sync-main.yml
@@ -2,9 +2,8 @@ name: Workflow Sync Main
 
 on:
   push:
-    branches:
-      - main
-      
+    branches: main
+    
   workflow_dispatch:
 
 jobs:
