--- a/.github/workflows/workflow-sync-main.yml
+++ b/.github/workflows/workflow-sync-main.yml
@@ -2,7 +2,9 @@ name: Workflow Sync Main
 
 on:
   push:
-    branches: main
+    branches: 
+      - main
+      - feature/*
     
   workflow_dispatch:
 
