--- a/.github/workflows/workflow-sync-main.yml
+++ b/.github/workflows/workflow-sync-main.yml
@@ -1,4 +1,4 @@
-name: Workflow Sync Main
+name: Workflow Sync develop-squad-01
 
 on:
   push:
@@ -13,9 +13,18 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Run a one-line script
-        run: echo I am sync 'main' to 'develop'
+        
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v4.0.2
+        with:
+          commit-message: Auto PR to sync 'main'
+          branch: ${{ github.ref }}
+          delete-branch: false
+          base: develop-squad-01
+          title: This is an automatic PR from 'main' to 'develop-squad-01'
+          labels: auto-pull-request
+          assignees: gigiogodoi
+          reviewers: gigiogodoi
