--- a/.github/workflows/ci-cd-multi-server.yml
+++ b/.github/workflows/ci-cd-multi-server.yml
@@ -7,6 +7,15 @@ on:
     branches: [ develop, main ]
 
   workflow_dispatch:
+     inputs:
+      envRightNow:
+        description: 'Build for Environment'     
+        required: true 
+        type: choice
+        options:
+        - TST1
+        - TST2
+        - TST3 
 
 jobs:
   Build:
@@ -43,7 +52,7 @@ jobs:
     runs-on: [self-hosted, srvprd01]
     needs: [Artifact]
     
-    if: github.ref == 'refs/heads/main'
+    if: github.event.inputs.envRightNow == 'TST1'
     
     environment: 
       name: RIGHTNOW01
@@ -58,7 +67,7 @@ jobs:
     runs-on: [self-hosted, srvprd02]
     needs: [Artifact]
     
-    if: github.ref == 'refs/heads/main'
+    if: github.event.inputs.envRightNow == 'TST2'
     
     environment: 
       name: RIGHTNOW02
@@ -73,7 +82,7 @@ jobs:
     runs-on: [self-hosted, srvprd03]
     needs: [Artifact]
     
-    if: github.ref == 'refs/heads/main'
+    if: github.event.inputs.envRightNow == 'TST3'
     
     environment: 
       name: RIGHTNOW03
